Add Swagger dataTypes support, Http status description, and request/response array support.